<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">SocialPlayer</string>
    <string name="searchButton">Search</string>
    <string name="developerName">Mamorky</string>
    <string name="activity_name_canciones">Songs</string>
    <string name="txvSignIn">Sign IN</string>
    <string name="txvUser">User</string>
    <string name="txvPassword">Password</string>
    <string name="chkRemember">Remember me</string>
    <string name="txvSignUp"><u>Register</u></string>
    <string name="btnSignIn">Log In</string>
    <string name="btnGoogle">Google</string>
    <string name="btnFacebook">Facebook</string>
    <string name="user">Pepe</string>
    <string name="contrasenia">12345678</string>
    <string name="txvAlbum">Albums</string>
    <string name="appNameLogin">Social Player</string>
    <string name="activity_name_artist">Artist</string>
    <string name="activity_name_albums">Albums</string>
    <string name="menu_item_delete">delete</string>
    <string name="activity_name_playlists">Playlists</string>
    <string name="str_name_user">Pepe</string>
    <string name="str_user_email">pepe@hotmail.com</string>
    <string name="str_home">Home</string>
    <string name="str_options_generals">General</string>
    <string name="action_helper">Help</string>
    <string name="action_configuration">configuration</string>
    <string name="hello_blank_fragment_one">fragment1</string>
    <string name="hello_blank_fragment_two">fragment2</string>
    <string name="action_about">About Me</string>
    <string name="action_delete">delete</string>
    <string name="action_modify">modify</string>
    <string name="title_fragment_songs">Songs</string>
    <string name="title_fragment_albums">Albums</string>
    <string name="title_fragment_Artist">Artists</string>
    <string name="title_fragment_playlists">Playlists</string>
    <string name="action_close_session">Log Out</string>
    <string name="key_mode_night">modenightapp</string>
    <string name="add_playlist_string">Add Playlist</string>
    <string name="edit_playlist_string">Edit Playlist</string>
    <string name="notify_night">com.example.mamorky.socialplayer.NIGHTNOTIFY</string>
    <string name="dayMode">Change mode Day</string>
    <string name="modeNight">Change mode Night</string>
    <string name="notifyChannel">notificacionCanal</string>
    <string name="not_close_session">Cant close session</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_cambiar_color">Change color</string>
    <string name="str_cambiar_color">Change color</string>
    <string name="action_day_night">Change day/night</string>
    <string name="quieres_salir">Do you want exit?</string>
    <string name="quires_salir_l">Are you sure of you want exit of the app?</string>
    <string name="si">Yes</string>
    <string name="no">No</string>
    <string name="active_mode_day">Mode Day Activated</string>
    <string name="modo_day_night_desactived">Has been desactivated day/night automatic</string>
    <string name="active_mode_night">Mode Night Activated</string>
    <string name="error_log_out">Error log out</string>
    <string name="songs">Songs</string>
    <string name="albums">Albums</string>
    <string name="artistas">Artists</string>
    <string name="error_up_preferences">Error up to firebase preferences</string>
</resources>

